--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,37 +6,26 @@
         
       </ion-refresher>
         
-                
-                <!--div id="slides">
-                    <div ng-repeat = "post in posts | limitTo : 3">
-                        <img ng-src="{{post.featured_image.source}}" width="100%" height="auto"/> 
-                    
-                    </div>
-                
-                </div>-->
-            <ks-swiper-container speed="1000" loop="true" show-nav-buttons="true" slides-per-view="1" pagination-clickable="true" autoplay="5000">
-                <ks-swiper-slide class="swiper-slide" ng-repeat="post in posts | limitTo: 5">
-                    <img ng-src="{{post.featured_image.source}}" width="100%" height="auto"/>
-                </ks-swiper-slide>            
-            </ks-swiper-container>
-      
-    <label class="item item-input">
-<i class="icon ion-search placeholder-icon"></i>
-<input type="search" placeholder="search" ng-model="searchQuery"/></label>
-            
+<!--      search bar   -->
+	    <label class="item item-input">
+			<i class="icon ion-search placeholder-icon"></i>
+			<input type="search" placeholder="search" ng-model="searchQuery"/>
+		</label>
+						
         
       
 <!--      posts lists   -->
-        <div class="list">
+        <div class="row gallery" style="flex-wrap: wrap;">
 		
-            <a style="margin-bottom:10px; border-bottom:none;" class="item item-thumbnail-left item-text-wrap item-icon-left" ng-repeat="post in posts | orderBy: '-date' | filter:searchQuery" href="#app/single/{{posts.indexOf(post)}}">
-
-                <img ng-src="{{post.better_featured_image.media_details.sizes.thumbnail.source_url}}"  imageonload/>
-            <h2 ng-bind-html="post.title.rendered | uppercase" ></h2>
-                <p ng-bind-html="post.excerpt.rendered | limitTo : 50" class="left"></p>
-                <p style="float:left; font-style:italic; margin-bottom:10px;"><small>{{post.date | fromNow}}</small></p>
-            </a>
-            
+			<div class="col col-50" ng-repeat="post in posts | orderBy: '-date' | filter:searchQuery" href="#app/single/{{posts.indexOf(post)}}">
+				<a style="margin-bottom:10px; border-bottom:none;" class="item item-thumbnail-top item-text-wrap item-icon-top" href="#app/single/{{posts.indexOf(post)}}">
+					<img ng-src="{{post.better_featured_image.media_details.sizes.thumbnail.source_url}}"  imageonload/>
+				<h2 ng-bind-html="post.title.rendered | uppercase" ></h2>
+					<p ng-bind-html="post.product_qty" class="left"></p>
+					<p style="float:left; font-style:bold; margin-bottom:10px;"><b>&#x9f3; {{post.product_price}}</b></p>
+				</a>
+				
+            </div>  
         </div>    
           
   </ion-content>
