app name changed to darun bazar,bar color changed

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,11 +1,11 @@
-<ion-view view-title="Mukto pata">
+<ion-view view-title="Darun Bazar">
   <ion-content>
       <ion-refresher
     pulling-text="Pull to refresh..."
     on-refresh="doRefresh()">
         
       </ion-refresher>
-        
+
 <!--      search bar   -->
 	    <label class="item item-input">
 			<i class="icon ion-search placeholder-icon"></i>
