--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-assertive">
       <ion-nav-back-button>
       </ion-nav-back-button>
         
@@ -9,11 +9,7 @@
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
-       <ion-nav-buttons side="right">
-<!--        <button style="background-color:#0096d6;" class="button button-icon ion-android-share-alt"></button>-->
-        <button class="button button-icon button-clear ion-android-more-vertical" menu-toggle="right">
-        </button>
-      </ion-nav-buttons>     
+  
         
         
     </ion-nav-bar>
@@ -21,20 +17,27 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-positive">
+    <ion-header-bar class="bar-assertive">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item class="item item-icon-left" menu-close href="#/app">
+    <ion-item class="item item-icon-left" menu-close href="#/app">
             <i class="icon ion-ios-home-outline"></i>
-          Home
+         Home
         </ion-item>
           <ion-item class="item item-icon-left" nav-clear menu-close ng-click="login()">
             <i class="icon ion-person"></i>
           Login
-        </ion-item>
-       <!-- <ion-item menu-close href="#">
+        </ion-item> 
+		  <!--  
+		 <ion-item menu-close href="#">
+            <i ng-repeat="category in categorys">{{category.name}}</i>
+          
+        </ion-item> 
+		-->
+		
+      <ion-item menu-close href="#">
           Search
         </ion-item>
         <ion-item menu-close href="#">
@@ -42,7 +45,7 @@
         </ion-item>
         <ion-item menu-close href="#">
           Playlists
-        </ion-item>-->
+        </ion-item> 
       </ion-list>
     </ion-content>
   </ion-side-menu>
